--- a/styles.css
+++ b/styles.css
@@ -3,10 +3,11 @@ body {
     font-family: Arial, sans-serif;
   }
   body {
-    display: grid;
-    grid-template-rows: 1fr auto;
+    display: flex;
+    flex-wrap: wrap;
     min-height: 100vh;
     height: 100%;
+   
   }
   header {
     position: fixed;
@@ -85,7 +86,7 @@ body {
     color: rgb(255, 255, 255);
     font-size: x-large;
   }
-  .WU {
+  .WWHY {
     height:25%;
     padding: 20px;
   }
@@ -105,11 +106,32 @@ body {
     color: rgb(0, 0, 0);
     text-align: right;
   }
+  .WU {
+    height:25%;
+    padding: 20px;
+  }
+  .text-box4 {
+    height:80%;
+    background-color: #df1e1e;
+    padding: 60px;
+    text-align: center;
+    margin: 0 auto;
+    max-width: 80%;
+  }
+  .text4 {
+    
+    font-size: x-large;
+  }
+  .header4 {
+    color: rgb(0, 0, 0);
+    text-align: center;
+  }
   footer {
-    position: absolute;
-    bottom: 0;
+    position: flex;
+    flex-shrink: 0;
     width: 100%;
     background-color: #ffa500;
+    
     text-align: center;
     padding: 16px;
   }
