--- a/contact.css
+++ b/contact.css
@@ -105,7 +105,7 @@ body {
     text-align: right;
   }
   footer {
-    position: absolute;
+    position: flex;
     bottom: 0;
     width: 100%;
     background-color: #ffa500;
