--- a/contact.css
+++ b/contact.css
@@ -105,10 +105,12 @@ body {
     text-align: right;
   }
   footer {
+     footer {
     position: flex;
-    bottom: 0;
+    flex-shrink: 0;
     width: 100%;
     background-color: #ffa500;
+    
     text-align: center;
     padding: 16px;
   }
