--- a/contact.css
+++ b/contact.css
@@ -2,8 +2,9 @@ body {
     background-color: rgb(194, 87, 0);
     font-family: Arial, sans-serif;
   }
-  .container {
-    display: flex;
+  body {
+      display: flex;
+    flex-wrap: wrap;
     min-height: 100vh;
     height: 100%;
   }
