--- a/contact.css
+++ b/contact.css
@@ -2,9 +2,8 @@ body {
     background-color: rgb(194, 87, 0);
     font-family: Arial, sans-serif;
   }
-  body {
-      display: flex;
-    flex-wrap: wrap;
+  .container {
+    display: flex;
     min-height: 100vh;
     height: 100%;
   }
@@ -50,12 +49,66 @@ body {
     padding: 20px;
     
   }
-     footer {
-    position: flex;
-    flex-shrink: 0;
+  .text-box {
+    height:100%;
+    background-color: white;
+    padding: 60px;
+    text-align: center;
+    margin: 0 auto;
+    max-width: 80%;
+  }
+  
+  h1 {
+    color: rgb(0, 0, 0);
+  }
+  .text {
+    font-size: x-large;
+  }
+  .WWA {
+    height:25%;
+    padding: 20px;
+  }
+  .text-box2 {
+    height:100%;
+    background-color: rgb(165, 0, 0);
+    padding: 60px;
+    text-align: left;
+    margin: 0 auto;
+    max-width: 80%;
+  }
+  .header2 {
+    text-align: left;
+    color: rgb(255, 255, 255);
+  }
+  .text2 {
+    color: rgb(255, 255, 255);
+    font-size: x-large;
+  }
+  .WU {
+    height:25%;
+    padding: 20px;
+  }
+  .text-box3 {
+    height:100%;
+    background-color: #DF8B1E;
+    padding: 60px;
+    text-align: right;
+    margin: 0 auto;
+    max-width: 80%;
+  }
+  .text3 {
+    
+    font-size: x-large;
+  }
+  .header3 {
+    color: rgb(0, 0, 0);
+    text-align: right;
+  }
+  footer {
+    position: absolute;
+    bottom: 0;
     width: 100%;
     background-color: #ffa500;
-    
     text-align: center;
     padding: 16px;
   }
