--- a/contact.css
+++ b/contact.css
@@ -2,7 +2,7 @@ body {
     background-color: rgb(194, 87, 0);
     font-family: Arial, sans-serif;
   }
-  .container {
+  body{
     display: flex;
     min-height: 100vh;
     height: 100%;
