--- a/contact.css
+++ b/contact.css
@@ -146,7 +146,8 @@ body {
   text-align: center;
   margin: 0 auto;
   max-width: 80%;
-  
+  justify-content: center;
+  align-items: center;
 
 }
 form {
